# OpenCDA

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Dockerfile.dockerignore  Dockerfile1  README.md  Town10HD.net.xml  coverage.md  environment.yml  mocked_carla.py  opencda.py  opencda_carla.py  pyproject.toml  requirements-cuda.txt  requirements.txt  requirements_cavise.txt  requirements_ci.txt  setup.sh  test_drive_profile_plotting.py  test_ekf.py  test_kf.py  tmp_shit.txt
.devcontainer/arch-linux/: Dockerfile  devcontainer.json
.github/: README.md  dependabot.yml  pre-commit-config-ci.yaml
.github/workflows/: build.yml  pull_request.yml  ruff.yml  tests-matrix-ci.yml  tests.yml  type-check.yml
.github/workflows/requirements/: constraints-py310.txt  constraints-py312.txt  requirements-ci.txt
AIM/: __init__.py  aim_model.py  registry.py
AIM/models/: __init__.py
AIM/models/mtp/: GNN_mtl_gnn.py  __init__.py  constants.py  model.py  model_wrapper.py
CoDriving/: .gitignore  MPC_XY_Frame.py  constants.py  data_path_config.py  dataset_generate_csv.py  dataset_preprocess.py  generate_train_configs.py  get_top_configs_by_metrics.py  prepare_data.sh  pyproject.toml  train.py  vizualize_data.py
CoDriving/CoDriving/MPC_XY_Frame/: MPC_XY_Frame.py
CoDriving/CoDriving/config/: config.py
CoDriving/CoDriving/data_scripts/: dataset.py  generate_csv_utils.py  preprocess_utils.py
CoDriving/CoDriving/dataset_scripts/: dataset.py  metrics_logger.py
CoDriving/CoDriving/models/: model_factory.py  model_factory_config.py  model_list.yaml
CoDriving/CoDriving/train_scripts/: train_one_config.py
CoDriving/MPC_XY_Frame/: MPC_XY_Frame.py
CoDriving/configuration/: MPC_config.yaml
CoDriving/dataset/: add_moduls.py  dataset.py  generate_csv.py  preprocess.py
CoDriving/dataset/utils/: generate_csv_utils.py
CoDriving/experements/test/: model_config.yaml  train_config.yaml
CoDriving/experements_configs/: model_config.yaml  train_config.yaml
CoDriving/models/: GNN_mtl_gnn.py  GNN_mtl_mlp.py  model_factory.py  model_list.yaml
CoDriving/scripts/: add_path.py  constants.py  data_config.py  dataset_generate_csv.py  dataset_preprocess.py  generate_configs.py  train.py  train_gnn.py
CoDriving/scripts/dataset/: .gitignore  MPC_XY_Frame.py  dataset.py  generate_csv.py  generate_rou_xml.py  preprocess.py  train_gnn.py
CoDriving/sripts/dataset/: preprocess.py
CoDriving/train/: train_gnn.py
OpenCOOD/: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
OpenCOOD/.devcontainer/ubuntu/: Dockerfile  devcontainer.json
OpenCOOD/docs/: index.rst  requirements.txt
OpenCOOD/opencood/pcdet_utils/: CMakeLists.txt  setup.py
OpenCOOD/opencood/pcdet_utils/cmake/: WriteCudaArtifactManifest.cmake
OpenCOOD/opencood/pcdet_utils/iou3d_nms/: iou3d_nms_utils.py
OpenCOOD/opencood/pcdet_utils/iou3d_nms/src/: iou3d_nms.cpp
OpenCOOD/opencood/pcdet_utils/pointnet2/pointnet2_batch/: pointnet2_modules.py  pointnet2_utils.py
OpenCOOD/opencood/pcdet_utils/pointnet2/pointnet2_stack/: pointnet2_modules.py  pointnet2_utils.py
OpenCOOD/opencood/pcdet_utils/roiaware_pool3d/: roiaware_pool3d_utils.py
OpenCOOD/opencood/utils/: CMakeLists.txt  box_overlaps.py  box_utils.py  common_utils.py  draco_compression.py  eval_utils.py  max_consensus.py  pcd_utils.py  transformation_utils.py  visulizor.py
ci/: constraints-py311.txt  requirements-ci.txt
codriving/: .gitignore  pyproject.toml
codriving/scripts/: data_config.py  dataset_generate_csv.py  dataset_preprocess.py  train_gnn.py
docker/: sync-build-artifacts.sh
docs/: conf.py  index.rst  modules.rst  opencda.core.common.codriving_model_manager.rst  requirements.txt
docs/md_files/: contributor.md  customization.md  cyberattacks.md  developer_tutorial.md  getstarted.md  ghost_sybil_attack.md  index-mkdocs.md  installation.md  introduction.md  lidar_jamming_attack.md  logic_flow.md  release_history.md  replay_attack.md  traffic_generation.md  v2x_position_falsification.md  yaml_define.md
opencda/: opencda_carla.py  version.py
opencda/core/common/communication/: CMakeLists.txt  communication_manager.py  conftest.py  manager.py  payload_handler.py  serialize.py  toolchain.py
opencda/core/common/communication/cmake/: WriteProtobufArtifactManifest.cmake
opencda/core/common/communication/messages/: CMakeLists.txt  artery.proto  capi.proto  opencda.proto
opencda/core/common/communication/test/: conftest.py  test_communication_manager.py  test_message_handler.py  test_toolchain.py
opencda/metrics_tools/: __init__.py  base_metric.py  collection_models.py  config.py  metric_collector.py  metric_sample.py  plot_builder.py  registry.py  report_builder.py  report_models.py
opencda/scenario_testing/: 1551_carla_cavs.py  1551_sumo_cavs.py  general_scenario.py  intersections.py  realistic_town06_cosim.py  rsu_check.py  scenario.py  types.py  v2xp_datadump_town06_carla.py
point_pillar_where2comm_v2xset/: config.yaml  eval.yaml
scripts/: generate_prediction_yaml.py  get_spectator_position.py  make_video.py  netconvert_carla.py  polyconvert_carla.py  set_spectator_position.py
test/: conftest.py  mocked_carla.py  test_adversary_framework.py  test_agent.py  test_agent_manager.py  test_aim_services.py  test_c_o3d_lidar_libs.py  test_cosim_api.py  test_drive_profile_plotting.py  test_ekf.py  test_gt_localizer.py  test_integration_metrics_attacks.py  test_kf.py  test_localization_debug_helper.py  test_localizer_factory.py  test_map_manager.py  test_metrics_tools.py  test_ml_manager.py  test_netconvert_carla.py  test_obstacle_vehicle.py  test_perception_manager.py  test_planer_debug_helper.py  test_platooning_stubs.py  test_polyconvert_carla.py  test_rsu_manager.py  test_safety_sensors.py  test_scenario_finalize.py  test_self_informer.py  test_sensor_factory.py  test_sensor_localizer.py  test_sensor_transformation.py  test_sim_api.py  test_static_obstacle.py  test_vehicle_manager.py  test_world_frame.py
(+673 files in other folders)
